syntax = "proto3";

option java_package = "com.grpctest.store";
option java_multiple_files = true;

option go_package = "store";

message StoreRequest {
     int32 id = 1;
     string value = 2;
}

message StoreResponse {
    bool done = 1;
}

message GetRequest {
    int32 id = 1;
}

message GetResponse {
    int32 id = 1;
    string value = 2;
}

message StoreError{
    string error = 1;
}

service StoreService {
    rpc AddValue (StoreRequest) returns (StoreResponse) {};
    rpc GetValue (GetRequest) returns (GetResponse) {};
}
